<!--
  ~ Copyright By Noor Nabiul Alam Siddiqui on Behalf of RTsoftBD
  ~ (C) 7/15/17 4:38 PM
  ~  www.fb.com/sazal.ns
  ~  _______________________________________
  ~    Name:     DipuMoni
  ~    Updated at: 7/15/17 1:50 PM
  ~  ________________________________________
  -->

<resources>
    <string name="app_name">Dr. Dipu Moni</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Send SMS</string>

    <string name="about">About</string>
    <string name="latest_update">Latest Update</string>
    <string name="dev_work">Development Work</string>
    <string name="achievement">Achievements</string>
    <string name="resume">Political Resume</string>
    <string name="education">Education</string>
    <string name="gallery">Gallery</string>
    <string name="social">Get In Touch</string>
    <string name="reg">Registration</string>
    <string name="login">Login</string>
    <string name="news_feed">News Feed</string>
    <string name="be_a_part">Become A Part</string>

    <array name="nav_array">
        <item>@string/news_feed</item>
        <item>@string/about</item>
        <item>@string/latest_update</item>
        <item>@string/dev_work</item>
        <item>@string/achievement</item>
        <item>@string/resume</item>
        <item>@string/education</item>
        <item>@string/gallery</item>
        <item>@string/social</item>
        <item>@string/reg</item>
        <item>@string/login</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="exit">Exit</string>
    <string name="sure">Are You Sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="upozila">Upozila</string>
    <string name="union">Union</string>
    <string name="word">Word</string>
    <string name="submit">Submit</string>

    <string name="nameError">input name. max 256 alphanumeric</string>
    <string name="phoneError">phone number must be 11 digits</string>
    <string name="emailError">give valid email address</string>
    <string name="replay">Replay</string>
    <string name="trueAns">Job Done</string>
    <string name="falseAnd">Data not saved on Server</string>

    <string name="sendEmail">Send Email to Me</string>
    <string name="fromEmail">Your Email Address</string>
    <string name="subjectEmail">Subject</string>
    <string name="bodyEmail">Write something .....</string>
    <string name="send">Compose an Email</string>

    <string name="beSocial">Be Social. Keep In Touch</string>
    <string name="fb">Facebook</string>
    <string name="gPlus">Google Plus</string>
    <string name="twitter">Twitter</string>

    <string name="subjectError">enter subject</string>
    <string name="bodyError">body is empty</string>

    <string name="admin_panel">Go to Admin panel …</string>
    <string name="delete">Delete</string>

    <string name="nid">NID</string>

    <!--About Us-->
    <string name="aboutUs">ABOUT US</string>
    <string name="developerName">Noor Nabiul Alam Siddiqui</string>
    <string name="pos">Android Developer</string>
    <string name="from">FB.com/sazal.ns</string>
    <string name="copyright">Developed &amp; Copyright</string>
    <string name="con">By  RTSoftBD.</string>
    <string name="designation_name">Designation</string>

    <string name="no_internet">No Active Internet. Showing last synchronized data</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>

    <array name="union_array">
        <item>Chitoshi(E)</item>
        <item>Faridpur</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Jamalpur</item>
        <item>Kishoreganj</item>
        <item>Madaripur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Mymensingh</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Netrokona</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Sherpur</item>
        <item>Tangail</item>
        <item>Bandarban</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chittagong</item>
        <item>Comilla</item>
        <item>Feni</item>
        <item>Khagrachhari</item>
        <item>Lakshmipur</item>
        <item>Noakhali</item>
        <item>Rangamati</item>
        <item>Bogra</item>
        <item>Naogaon</item>
    </array>
</resources>
