<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright By Noor Nabiul Alam Siddiqui on Behalf of RTsoftBD
  ~  www.fb.com/sazal.ns
  ~  ------------------------------------
  ~    Name:     DipuMoni
  ~    Created at:  7/5/17 5:28 PM
  ~    Updated at: 6/19/17 2:40 AM
  ~  ------------------------------------
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news_feed"
            android:icon="@drawable/ic_library_books_indigo_700_36dp"
            android:title="@string/news_feed"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_person_indigo_a700_36dp"
            android:title="@string/about"/>
        <item
            android:id="@+id/nav_latest_update"
            android:icon="@drawable/ic_fiber_new_indigo_a700_36dp"
            android:title="@string/latest_update" />
        <item
            android:id="@+id/nav_dev"
            android:icon="@drawable/ic_account_balance_indigo_700_36dp"
            android:title="@string/dev_work"/>
        <item
            android:id="@+id/nav_achievement"
            android:icon="@drawable/ic_star_indigo_a700_36dp"
            android:title="@string/achievement"/>
        <item
            android:id="@+id/nav_resume"
            android:icon="@drawable/ic_description_indigo_a700_36dp"
            android:title="@string/resume"/>
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_school_indigo_a700_36dp"
            android:title="@string/education"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_photo_library_indigo_a700_36dp"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_pages_indigo_a700_36dp"
            android:title="@string/social" />
        <item
            android:id="@+id/nav_reg"
            android:icon="@drawable/ic_person_add_indigo_a700_36dp"
            android:title="@string/reg" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/login"
            android:menuCategory="secondary"
            android:orderInCategory="101"
            android:icon="@drawable/ic_vpn_key"/>
    </group>


</menu>
