<!--
  ~ Copyright By Noor Nabiul Alam Siddiqui  (c) 2017.
  ~  www.fb.com/sazal.ns
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.rtsoftbd.siddiqui.drDipuMoni.SocialFragment">

    <RelativeLayout
        android:id="@+id/icons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendEmail"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAllCaps="true"/>
        <requestFocus/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/fromHolder"
        android:layout_below="@+id/emailTextView">
        <EditText
            android:id="@+id/fromTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/fromEmail"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/subjectHolder"
        android:layout_below="@+id/fromHolder">
        <EditText
            android:id="@+id/subjectTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailSubject"
            android:hint="@string/subjectEmail"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/bodyHolder"
        android:layout_below="@+id/subjectHolder">
        <EditText
            android:id="@+id/bodyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bodyEmail"
            android:inputType="textMultiLine"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bodyHolder"
        android:textSize="20sp"
        android:text="@string/send"
        android:layout_marginTop="20dp"
        android:onClick="onClick"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sendButton"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beSocial"
                android:gravity="center"
                android:textAllCaps="true"
                android:textStyle="italic|bold"
                android:textSize="20sp"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/fbdButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fb"
                android:textSize="20sp"
                android:background="@color/fb"
                android:layout_marginTop="20dp"
                android:onClick="onClick"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/gPlusButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gPlus"
                android:textSize="20sp"
                android:background="@color/googlePlus"
                android:layout_marginTop="10dp"
                android:onClick="onClick"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/twitterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@color/twitter"
                android:text="@string/twitter"
                android:layout_marginTop="10dp"
                android:onClick="onClick"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
